<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.identifiers.cloud.ws</groupId>
	<artifactId>metadata</artifactId>
	<version>1.4.3</version>
	<packaging>jar</packaging>

	<name>metadata</name>
	<description>Metadata Extraction Services for identifiers.org</description>
	<url>https://identifiers.org</url>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.5</version>
	</parent>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>The European Bioinformatics Institute</name>
		<url>https://ebi.ac.uk</url>
	</organization>

	<developers>
		<developer>
			<id>renatocjn</id>
			<name>Renato Caminha Juacaba Neto</name>
			<email>rjuacaba@ebi.ac.uk</email>
			<organization>EMBL-European Bioinformatics Institute</organization>
			<organizationUrl>https://ebi.ac.uk/</organizationUrl>
			<timezone>Europe/London</timezone>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>mbernal</id>
			<name>Manuel Bernal-Llinares</name>
			<email>mbdebian@gmail.com</email>
			<organization>EMBL-European Bioinformatics Institute</organization>
			<organizationUrl>https://ebi.ac.uk/</organizationUrl>
			<timezone>Europe/London</timezone>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/identifiers-org/cloud-ws-metadata.git</connection>
		<developerConnection>scm:git:ssh://github.com:identifiers-org/cloud-ws-metadata.git</developerConnection>
		<url>https://github.com/identifiers-org/cloud-ws-metadata/tree/master</url>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/identifiers-org/cloud-ws-metadata/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.identifiers.cloud</groupId>
			<artifactId>libapi</artifactId>
			<version>3.0.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.springframework.retry</groupId>
            <artifactId>spring-retry</artifactId>
        </dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.17.1</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-chrome-driver</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>


	</build>


</project>
